crates/toon-schema/tests/compile_fail/null_for_non_optional.stderr
error: example 1 field 'field' does not allow null; expected string
 --> tests/compile_fail/null_for_non_optional.rs:6:8
  |
6 | struct NullForNonOptional {
  |        ^^^^^^^^^^^^^^^^^^
